--- a/circle-module/src/main/res/layout/activity_circle.xml
+++ b/circle-module/src/main/res/layout/activity_circle.xml
@@ -8,6 +8,7 @@
 
     <TextView
         android:id="@+id/test"
+        android:padding="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
